# authscript

./: .coderabbit.yaml  .dockerignore  .gitignore  README.md  dashboard-emtjzpqk-20260126042446.txt  orval.config.ts  package-lock.json  package.json  renovate.json
.github/: cliff.toml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  implementation.yml  investigation.yml
.github/workflows/: ci.yml  project-automation.yml
apps/dashboard/: .dockerignore  Dockerfile  Dockerfile.build  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts
apps/gateway/: coverage.settings.xml
apps/intelligence/: .dockerignore  Dockerfile  README.md  openapi.json  pyproject.toml
apps/intelligence/src/: __init__.py  config.py  llm_client.py  main.py
apps/intelligence/src/api/: analyze.py
apps/intelligence/src/fixtures/: demo_mri_lumbar.json
apps/intelligence/src/models/: clinical_bundle.py  pa_form.py  policy.py
apps/intelligence/src/parsers/: pdf_parser.py
apps/intelligence/src/policies/: __init__.py  example_policy.py  generic_policy.py  mri_lumbar.py  registry.py
apps/intelligence/src/policies/seed/: __init__.py  echocardiogram.py  epidural_steroid.py  mri_brain.py  mri_lumbar.py  physical_therapy.py  tka.py
apps/intelligence/src/reasoning/: __init__.py  confidence_scorer.py  evidence_extractor.py  form_generator.py
apps/intelligence/src/tests/: test_analyze.py  test_confidence_scorer.py  test_echocardiogram_policy.py  test_evidence_extractor.py  test_form_generator.py  test_generic_policy.py  test_llm_client.py  test_pa_form_model.py  test_pdf_parser.py  test_policy_model.py  test_policy_registry.py  test_seed_policies.py
docs/: ARCHITECTURE.md  access-requirements.md  amendments.md  syllabus.md  todo-refactor.md
docs/debugging/: 2026-02-01-athenahealth-api-constraints.md  AllResources-20260131104348.txt  AllResources-20260221080133.txt  dashboard-gzvyxcyn-20260220103723.txt  gateway-gpzeazba-20260202011329.txt  outstanding-issues.md  redis-svckhkde-20260225030949.txt  selected-scopes.md  (+1 more)
market-research/: AI Prior Authorization Automation Investigation.md
orchestration/: AuthScript.sln
pitch/: Prior Authorization notes and demo forms.md
scripts/: README-fill-pdf.md  demo-checklist.md  fill_pdf_form.py  fill_tx_pa_form.py  generate-pdf-template.py  setup-secrets.sh  setup.sh  smoketest-gateway.sh
(+441 files in other folders)
